--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,8 @@
 
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=1024m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+# Increased heap size and optimized GC for R8/ProGuard
+org.gradle.jvmargs=-Xmx8192m -XX:MaxMetaspaceSize=2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseParallelGC -XX:ReservedCodeCacheSize=512m
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
@@ -36,4 +37,14 @@ android.suppressUnsupportedCompileSdk=34
 org.gradle.caching=true
 org.gradle.configureondemand=true
 org.gradle.daemon=true
-android.enableR8.fullMode=true
+
+# R8 optimizations to reduce memory usage
+# R8 is enabled by default in newer versions
+
+# Resource shrinking optimizations
+android.enableResourceOptimizations=true
+
+# Kotlin compiler daemon settings
+kotlin.daemon.jvmargs=-Xmx4096m
+kotlin.incremental=true
+kotlin.compiler.execution.strategy=daemon
