Fixes typo in keystore file variable
Corrects a misspelled variable name used for the local keystore file path, improving code readability.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ android {
                 keyPassword keystoreProps['keyPassword']
             } else {
                 // Use local keystore
-                def rootStreFile = rootProject.file("Yuusei.jks")
+                def rootStoreFile = rootProject.file("Yuusei.jks")
                 storeFile rootStoreFile
                 storePassword 'Yuusei123@'
                 keyAlias 'key0'
