--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,11 @@ render.experimental.xml
 *.keystore
 keystore.properties
 
+# Allow CI-specific keystore to be committed
+!ci/keystore/
+!ci/keystore/Yuusei.jks
+!ci/keystore/keystore.properties
+
 # Google Services (e.g. APIs or Firebase)
 google-services.json
 
