Normalizes keystore properties file
Ensures `grep` commands in CI work reliably by normalizing the
`keystore.properties` file and stripping any UTF-8 Byte Order Mark
(BOM) that might be present. This avoids potential issues when
validating the file's content.

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -72,6 +72,9 @@ jobs:
           exit 1
         fi
 
+        # Normalize file (strip UTF-8 BOM if present) to ensure grep works
+        sed -i '1s/^\xEF\xBB\xBF//' ci/keystore/keystore.properties || true
+
         # Validate keystore.properties has required keys
         required=(storeFile storePassword keyAlias keyPassword)
         for k in "${required[@]}"; do
