--- a/app/build.gradle
+++ b/app/build.gradle
@@ -137,6 +137,9 @@ dependencies {
     implementation 'androidx.compose.material3:material3:1.1.2'
     implementation 'androidx.compose.material:material-icons-extended'
     implementation 'androidx.navigation:navigation-compose:2.7.0'
+
+    // Material Components (for XML attrs like ?attr/colorOnSurface)
+    implementation 'com.google.android.material:material:1.11.0'
     
     // ViewModel
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
