--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,7 +98,8 @@ android {
         compose = true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion = '1.4.3'
+        // Updated to support newer Compose Material3 APIs used in code (HorizontalDivider, ElevatedCard, etc.)
+        kotlinCompilerExtensionVersion = '1.5.10'
     }
     packagingOptions {
         resources {
@@ -129,12 +130,13 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.activity:activity-compose:1.7.2'
     
-    // Compose
-    implementation platform('androidx.compose:compose-bom:2023.08.00')
+    // Compose (bump BOM to access newer Material3 APIs referenced in code)
+    implementation platform('androidx.compose:compose-bom:2024.04.01')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.compose.material3:material3:1.1.2'
+    implementation 'androidx.compose.foundation:foundation'
+    implementation 'androidx.compose.material3:material3'
     implementation 'androidx.compose.material:material-icons-extended'
     implementation 'androidx.navigation:navigation-compose:2.7.0'
 
