ci: regenerate keystore with alias key0 and unified passwords; update keystore.properties

--- a/keystore.properties
+++ b/keystore.properties
@@ -1,4 +1,4 @@
 ﻿storeFile=ci/keystore/Yuusei.jks
-storePassword=|i9Gjw6.aM4ys5NlF#ex)ES_ILzv
+storePassword=Yuusei123@
 keyAlias=key0
-keyPassword=&@.D^j2>'}HB_n;G07m*ZL5`"fpa
+keyPassword=Yuusei123@
