Improves translation and optimization
Enhances translation functionality by incorporating Gemini support and optimizing R8 configuration for improved performance and reduced app size.

- Adds Gemini as a translation provider, allowing users to choose between Gemini and Groq for translation tasks.
- Updates the translation repository to handle different providers, including batch translation based on the selected provider.
- Optimizes R8 configuration to aggressively remove debug and logging code, unused reflection and metadata, and unnecessary resource processing.
- Enables enum optimization, class merging, and method inlining for further performance gains and DEX size reduction.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,12 @@ android {
             crunchPngs false
             // Enable more aggressive optimizations
             zipAlignEnabled true
+            
+            // Additional R8 optimizations
+            consumerProguardFiles 'consumer-rules.pro'
+            
+            // Enable resource optimization
+            resValue "string", "app_version", versionName
         }
     }
     compileOptions {
