--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -20,23 +20,15 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
+        cache: 'gradle'
         
-    - name: Cache Gradle packages
-      uses: actions/cache@v4
-      with:
-        path: |
-          ~/.gradle/caches
-          ~/.gradle/wrapper
-        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-        restore-keys: |
-          ${{ runner.os }}-gradle-
           
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
       
     - name: Create local.properties
       run: |
-        echo "sdk.dir=$ANDROID_HOME" > local.properties
+        echo "sdk.dir=${ANDROID_SDK_ROOT:-$ANDROID_HOME}" > local.properties
         
     - name: Resolve keystore (repo files or secrets)
       shell: bash
@@ -141,7 +133,6 @@ jobs:
       id: commit
       run: |
         echo "short_sha=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-        echo "commit_msg=$(git log -1 --pretty=%B | head -1)" >> $GITHUB_OUTPUT
         echo "build_date=$(date +'%Y%m%d-%H%M')" >> $GITHUB_OUTPUT
         
     - name: Rename APK file
